components/xe/instance_oraclexe.tf
resource "aws_instance" "oraclexe" {
  ami                         = data.aws_ami.oraclexe.image_id
  instance_type               = "t2.micro"
  key_name                    = data.terraform_remote_state.acc.outputs.key_name
  iam_instance_profile        = aws_iam_instance_profile.oraclexe_profile.id
  associate_public_ip_address = false
  subnet_id                   = data.terraform_remote_state.base.outputs.subnets_tars_db[0]

  vpc_security_group_ids = [
    aws_security_group.oraclexe.id,
    data.terraform_remote_state.base.outputs.core_sg_id,
  ]

  tags = merge(
    local.default_tags,
    {
      "Name" = "${local.csi}-oraclexe"
    },
  )
}
